--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@
 }
 /* Banner Styles Here */
 #banner{
-  background-image: linear-gradient(90deg, #181818 0%, rgba(24, 24, 24, 0.822917) 24.48%, rgba(24, 24, 24, 0) 100%), url('/images/Rectangle\ 4705.png');
+  background-image: linear-gradient(90deg, #181818 0%, rgba(24, 24, 24, 0.822917) 24.48%, rgba(24, 24, 24, 0) 100%), url("../images/Rectangle\ 4705.png");
   background-repeat: no-repeat;
   position: block;
   background-size: cover;
